--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ But it must have the following features:
   <body>
 
     <div id="Project">
-      <img src="./assets/images/Project.jpg" alt="Mountains">
+      <img src="./Project.jpg" alt="Mountains">
       <h1>Isaiah 60:22</h1>
       <p>When the time is right, I, THE LORD, will make it happen.</p>
     </div>
